# real-time-recommendation

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  main.py  producer.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docker/grafana/provisioning/dashboards/: recommendation.json
docker/prometheus/: prometheus.yml
notebooks/: experiments.ipynb
scripts/: run_batch.py
src/: config.py  logging.py
src/batch/: calc_popular.py  csv_to_delta.py  csv_to_parquet.py  loader.py  preprocess.py  train_als.py
src/observability/: __init__.py  metrics.py  tracing.py
src/serve/: api.py  dependencies.py  schemas.py
src/stream/: archiver.py  consumer.py  producer.py  updater.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_api_utils.py  test_schemas.py  test_tracing.py  test_updater.py
