[project]
name = "real-time-recommendation"
version = "0.1.0"
description = "real time recommendation system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "kafka-python>=2.3.0",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pyspark>=4.1.0",
    "qdrant-client>=1.16.2",
    "redis>=7.1.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
