[project]
name = "real-time-recommendation"
version = "0.1.0"
description = "real time recommendation system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "delta-spark>=4.0.0",
    "fastapi[standard]>=0.128.0",
    "kafka-python>=2.3.0",
    "numpy>=2.4.0",
    "pyarrow>=22.0.0",
    "pyspark==4.0.0",
    "qdrant-client>=1.16.2",
    "redis>=7.1.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "ipykernel>=7.1.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v"
